<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F44336"
    android:clickable="false"
    tools:context=".activities.SignUp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/empty"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@drawable/rectangle73"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/rectangle73" />

    <EditText
        android:id="@+id/PasswordTextup"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_string"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whitelogo" />

    <EditText
        android:id="@+id/UserNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username_string"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/EmailTextup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EmailTextup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_string"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_string"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/PasswordTextup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/photoPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@android:color/white"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/UserNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/photopicker" />

    <ImageButton
        android:id="@+id/signUp"
        android:layout_width="212dp"
        android:layout_height="44dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="56dp"
        android:background="@android:color/white"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/signup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="129dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toTopOf="@+id/signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/ClientRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_m_a_client"
            android:textAlignment="textStart" />

        <RadioButton
            android:id="@+id/WorkerRadio"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_m_a_worker"
            android:textAlignment="textStart" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>