<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#DAC8C8">


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/message_swipe_refresh"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messagesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout"
            android:layout_below="@id/chat_bar"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="56dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <include
        android:id="@+id/chat_bar"
        layout="@layout/app_bar_layout" />

    <include
        android:id="@+id/custom_chat_bar"
        layout="@layout/custom_chat_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F8F8" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="4dp"
        android:background="#F6F5F5"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/add_button"
            android:padding="10dp"
            app:srcCompat="@drawable/baseline_add_black_18dp" />

        <EditText
            android:id="@+id/messageTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="#FBFBFB"
            android:paddingStart="10dp"
            android:paddingLeft="16dp"
            android:paddingEnd="10dp"
            android:paddingRight="16dp"
            android:text="@string/write_message"
            android:textSize="18sp"
            android:autofillHints="@string/write_message" />

        <ImageView
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:contentDescription="@string/sendbutton"
            android:padding="10dp"
            app:srcCompat="@drawable/baseline_send_black_18dp" />

    </LinearLayout>

</RelativeLayout>